--- a/ComforteZoneApp/package.json
+++ b/ComforteZoneApp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons-react-native": "^2.3.2",
+    "@react-navigation/native": "^5.7.3",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
