--- a/ComforteZoneApp/package.json
+++ b/ComforteZoneApp/package.json
@@ -13,11 +13,14 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "dom-helpers": "^5.2.1",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.0.0",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
