--- a/ComforteZoneApp/package.json
+++ b/ComforteZoneApp/package.json
@@ -22,6 +22,8 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-confetti-cannon": "^1.5.2",
+    "react-native-countries": "^1.0.3",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.0.0",
