pre-alpha build

--- a/ComforteZoneApp/data/tasks.json
+++ b/ComforteZoneApp/data/tasks.json
@@ -12,8 +12,8 @@
     },
     {
         "id": 3,
-        "title": "Lorem Ipsum 3",
-        "description": "Mauris dolor felis, sagittis at, luctus sed, aliquam non, tellus. Donec iaculis gravida nulla. Praesent id justo in neque elementum ultrices. "
+        "title": "Do not afraid of strangers",
+        "description": "There're many cool people around you. Find 5 people whereever you want and chat with them for at least 15 minutes"
     }
     ]
 }
